# python-cookbook-recipes

./: .coveragerc  .flake8  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
pyrecipes/: __init__.py  __main__.py  chapter.py  cookbook.py  recipe.py  template.py
pyrecipes/01_data_structures_and_algorithms/05_implementing_a_priority_queue/: example.py
pyrecipes/01_data_structures_and_algorithms/10_removing_duplicates_from_a_sequence_while_maintaining_order/: example.py
pyrecipes/01_data_structures_and_algorithms/11_naming_a_slice/: example.py
pyrecipes/01_data_structures_and_algorithms/14_sorting_objects_without_native_comparison_support/: example.py
pyrecipes/01_data_structures_and_algorithms/15_grouping_records_together_based_on_a_field/: example.py
pyrecipes/01_data_structures_and_algorithms/17_extracting_a_subset_of_a_dictionary/: example.py
pyrecipes/01_data_structures_and_algorithms/18_mapping_names_to_a_sequence_of_elements/: example.py
pyrecipes/02_strings_and_text/02_matching_text_at_start_or_end_of_a_string/: example.py
pyrecipes/02_strings_and_text/05_searching_and_replacing_text/: example.py
pyrecipes/cli/: create.py  example.py  ls.py  main.py  search.py
recipes/: __init__.py  __main__.py  recipe.py  utils.py
requirements/: dev-requirements.txt  requirements.txt  test-requirements.txt
src/pyrecipes/: __init__.py
src/recipe/: __main__.py
src/recipes/: __main__.py
tests/: conftest.py  test_chapter.py  test_cli.py  test_cookbook.py  test_main.py  test_recipe.py
(+94 files in other folders)
